infra/k8s/comments-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
      - name: comments
        image: benny0329/comments:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 4001
