infra/k8s/event-bus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
      - name: event-bus
        image: benny0329/event-bus:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 4005
