infra/k8s/moderation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
      - name: moderation
        image: benny0329/moderation:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 4003
