infra/k8s/query-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
      - name: query
        image: benny0329/query:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 4002
