infra/k8s/posts-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip
spec:
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
